--- a/WpfTestMultipleValidations/Views/TextBoxesView.xaml
+++ b/WpfTestMultipleValidations/Views/TextBoxesView.xaml
@@ -26,6 +26,7 @@
                          UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
                         <wpfTestMultipleValidations:NotEmptyValidationRule ValidatesOnTargetUpdated="True" />
+                        <wpfTestMultipleValidations:NumericEntryValidationRule ValidatesOnTargetUpdated="True" />
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
