--- a/WpfTestMultipleValidations/Views/TextBoxesView.xaml
+++ b/WpfTestMultipleValidations/Views/TextBoxesView.xaml
@@ -18,14 +18,14 @@
         <TextBox Grid.Row="0"
                  Width="300"
                  Height="50"
-                 Margin="0 0 0 30"
-                 Style="{StaticResource MaterialDesignFloatingHintTextBox}">
+                 Margin="0 0 0 30">
             <TextBox.Text>
                 <Binding Mode="TwoWay"
                          Path="TextInput1"
                          UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
                         <wpfTestMultipleValidations:NotEmptyValidationRule ValidatesOnTargetUpdated="True" />
+                        <wpfTestMultipleValidations:NumericEntryValidationRule ValidatesOnTargetUpdated="True" />
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
@@ -33,8 +33,7 @@
         <TextBox Grid.Row="1"
                  Width="300"
                  Height="50"
-                 Margin="0 0 0 30"
-                 Style="{StaticResource MaterialDesignFloatingHintTextBox}">
+                 Margin="0 0 0 30">
             <TextBox.Text>
                 <Binding Path="TextInput2" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
